Added simple map - 1st instruction

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,3 +16,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/ballrunner")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/ballrunner")
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
